crear server y contectar con la base de datos

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*, ::before, ::after, Button {
+    --tw-ring-color: transparent;
+}
+
